# jsonlite

./: .Rbuildignore  .Rinstignore  .gitattributes  .gitignore  .travis.yml  COPYING  Changes  Changes.html  Changes.xml  DESCRIPTION  GNUmakefile  LICENSE  NAMESPACE  NEWS  README  README.libjson  README.md  Todo.xml  air.toml  appveyor.yml  bigFile.R  bug.R  cleanup  cleanup.in  collapse_matrix.R  config.status  configure  configure.in  configure.win  cp_libjson  dataframe.R  example_data_api.txt  fail.R  foo.html  jsonText.rda  jsonlite.Rproj  jsonlite.pro  leak.R  libjsonFixes  purdy.R  (+5 more)
.github/: CONTRIBUTING.md
.github/workflows/: R-CMD-check.yaml
R/: apply_by_pages.R  as.iso.R  as.scalar.R  asJSON.AAAgeneric.R  asJSON.ANY.R  asJSON.AsIs.R  asJSON.Date.R  asJSON.ITime.R  asJSON.NULL.R  asJSON.POSIXt.R  asJSON.array.R  asJSON.character.R  asJSON.classRepresentation.R  asJSON.complex.R  asJSON.data.frame.R  asJSON.difftime.R  asJSON.extra.R  asJSON.factor.R  asJSON.function.R  asJSON.int64.R  asJSON.integer.R  asJSON.json.R  asJSON.list.R  asJSON.logical.R  asJSON.matrix.R  asJSON.numeric.R  asJSON.pairlist.R  asJSON.raw.R  asJSON.scalar.R  asJSON.sf.R  asJSON.ts.R  asJSON.vctrs.R  asVars.R  base64.R  buildcomplex.R  builddf.R  buildfactor.R  cleannames.R  collapse.R  collapse_object.R  (+62 more)
Web/: GNUmakefile  config.status  configure  index.html  index.html.in
autom4te.cache/: output.0  requests  traces.0
docs/: Makefile  conf.py  index.md  index.rst  make.bat
inst/: CITATION
inst/doc/: GNUmakefile  biblio.xml  fromJSONTimes.rda  json-aaquickstart.R  json-aaquickstart.Rmd  json-aaquickstart.html  json-apis.Rmd  json-apis.html  json-opencpu.Rnw  json-paging.Rmd  json-paging.html  missingValues.Rdb  missingValues.html  overview.Rdb  overview.aux  overview.bbl  overview.bib  overview.blg  overview.html  overview.out  overview.tex  performance.R  timings.docx  toJSONTimes.rda
inst/sampleData/: array2.json  array3.json  embedded.json  nestedArray.json  nestedObj.json  obj.json  obj1.json  obj2.json  obj3.json  usaColors.as  usaPolygons.as
inst/tests/: helper-toJSON.R  issues.txt  readme.txt  test-fromJSON-NA-values.R  test-fromJSON-Twitter.R  test-fromJSON-array.R  test-fromJSON-dataframe.R  test-fromJSON-datasets.R  test-fromJSON-date.R  test-fromJSON-matrix.R  test-libjson-escaping.R  test-libjson-large.R  test-libjson-utf8.R  test-libjson-validator.R  test-libjson.R  test-network-Github.R  test-serializeJSON-datasets.R  test-serializeJSON-functions.R  test-serializeJSON-types.R  test-toJSON-AsIs.R  test-toJSON-Date.R  test-toJSON-NA-values.R  test-toJSON-NULL-values.R  test-toJSON-POSIXt.R  (+9 more)
man/: JSON_T_NULL.Rd  JSONlite.Rd  as.iso.Rd  as.scalar.Rd  asJSON.Rd  asJSVars.Rd  base64.Rd  basicJSONHandler.Rd  decode.Rd  encode.Rd  flatten.Rd  format_json_rowwise.Rd  fromBSON.Rd  fromJSON.Rd  gzjson.Rd  isValidJSON.Rd  jsonlite.Rd  minify.Rd  mongo_read.Rd  mongoexport.Rd  prettify.Rd  rbind.pages.Rd  rbind_pages.Rd  read.json.Rd  readJSONStream.Rd  read_json.Rd  records2df.Rd  serializeJSON.Rd  simplifyDataFrame.Rd  singleton.Rd  stream_in-stream_out.Rd  stream_in.Rd  toJSON.Rd  toMongo.Rd  unbox.Rd  validate.Rd  vec_proxy_json.Rd  write.json.Rd
paper/: article.R  article.Rnw
revdep/: .gitignore  README.md  cran.md  failures.md  notes.md  problems.md
src/: ConvertUTF.c  JSONIterators.cpp  JSONMemory.cpp  JSONNode_Mutex.cpp  JSON_parser.c  JSON_parser.h  Makevars  Makevars.in  Makevars.win  RJSON.c  Rlibjson.h  base64.c  base64.h  collapse.h  collapse_array.c  collapse_object.c  collapse_pretty.c  escape_chars.c  integer64_to_na.c  internalJSONNode.cpp  is_datelist.c  is_recordlist.c  is_scalarlist.c  libjson.cpp  modp_numtoa.c  modp_stdint.h  null_to_na.c  num_to_char.c  parse.c  prettify.c  push_parser.c  push_parser.h  r-base64.c  register.c  rlibjson.c  row_collapse.c  rparser.c  transpose_list.c  validate.c
stuff/: benchmark.R  comparison.Rmd  comparison.html  fromBSON.R  mongo.R  parseTimestamp.R  profile.R  stream_io.R
test/: base64.R  dataframe.R  encode.R  testS4.R  testjson.R
tests/: array.R  bigInt.R  con1.R  con2.R  containers.R  empty.R  encoding.R  exp.R  flat.json  keys.R  nested.json  newsUTF8.rda  performance.R  prealloc.R  run-all.R  s4.R  scalarCollapse.R  serialize.R  simple.R  simplify.R  stringFun.R  testthat.R  toJSON.R  utf8.R
utf/: GNUmakefile  json.c  news.txt  news1.txt  news2.txt  raw.R
vignettes/: chapter4.Rnw  json-aaquickstart.Rmd  json-aaquickstart.html  json-apis.Rmd  json-apis.Rmd.orig  json-apis.Rnw  json-apis.html  json-mapping.R  json-mapping.Rnw  json-mapping.Rnw.orig  json-mapping.bib  json-opencpu.Rnw  json-paging.Rmd  json-paging.Rmd.orig  json-paging.html  json-quickstart1.Rmd  precompile.R  readme.txt  references.bib  serializeJSON-conventions.Rnw  toJSON-conventions.Rnw
(+76 files in other folders)
